kit confirm modal implemented

--- a/src/app/private/classes/classes-kit/classes-kit.component.html
+++ b/src/app/private/classes/classes-kit/classes-kit.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="kit-btns">
             <button mat-stroked-button routerLink="/private/aulas" class="confirm-kit">Voltar</button>
-            <button mat-raised-button class="confirm-kit" (click)="getKit()">Confirmar kit</button>
+            <button mat-raised-button class="confirm-kit" (click)="openDialog()">Confirmar kit</button>
         </div>
     </mat-card-content> 
 </mat-card>
