--- a/src/app/private/side-panel/side-panel.component.scss
+++ b/src/app/private/side-panel/side-panel.component.scss
@@ -68,7 +68,8 @@
                 padding: 10px;
 
                 span{
-                margin-left: 12px;
+                    margin-left: 12px;
+                    color: #968d8d;
                 }
             }
     }
