--- a/src/app/private/modals/view-simulator-modal/view-simulator-modal.component.html
+++ b/src/app/private/modals/view-simulator-modal/view-simulator-modal.component.html
@@ -37,7 +37,6 @@
            
         </div>
         <div mat-dialog-actions>
-            <button mat-button mat-dialog-close>Cancelar</button>
-            <button mat-raised-button mat-dialog-close>Confirmar</button>
+            <button mat-raised-button mat-dialog-close>Fechar</button>
         </div>
 </ng-container>
