--- a/src/app/private/side-panel/side-panel.component.html
+++ b/src/app/private/side-panel/side-panel.component.html
@@ -14,7 +14,7 @@
               <li *ngSwitchCase="user" routerLink="status"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Saúde do Simulador </a></li>
               <li *ngSwitchCase="admin" routerLink="status"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Saúde dos Simuladores </a></li>
               <li *ngSwitchCase="admin" routerLink="aulas"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Preparo de Kits </a></li>
-              <li *ngSwitchCase="user" routerLink="aulas"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Preparo de Kits </a></li>
+              <li *ngSwitchCase="user" routerLink="aulas"><img src="assets/imgs/icons/bag.png" alt=""><a>Preparo de Kits </a></li>
               <hr class="horizontal-line">
         </ul>
        
@@ -22,8 +22,8 @@
     
     <div class="second-side-panel">
         <ul class="second-side-menu-list">
-          <li><img src="assets/imgs/icons/email-icon.png" alt=""><span>administrator@gmail.com</span></li>
-          <li><img src="assets/imgs/icons/contact-phone.png" alt=""><span>(31)9933882992</span></li>
+          <li><img src="assets/imgs/icons/email-icon.png" alt=""><span>selath10@gmail.com</span></li>
+          <li><span>NPM version</span></li>
         </ul>
       </div>
 </div>
