histirr component created

--- a/src/app/private/modals/kit-confirm-modal/kit-confirm-modal.component.html
+++ b/src/app/private/modals/kit-confirm-modal/kit-confirm-modal.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   <mat-form-field appearance="fill">
     <mat-label>Local</mat-label>
-    <mat-select>
+    <mat-select [(ngModel)]="storageValue">
         <mat-option value="20">Armário 20</mat-option>
         <mat-option value="30">Armário 30</mat-option>
     </mat-select>
@@ -10,5 +10,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button mat-dialog-close cdkFocusInitial>Armazenar</button>
+  <button mat-button cdkFocusInitial (click)="getKitModal()">Armazenar</button>
 </div>
