--- a/src/app/private/side-panel/side-panel.component.html
+++ b/src/app/private/side-panel/side-panel.component.html
@@ -10,7 +10,7 @@
         <ul class="first-side-menu-list" [ngSwitch]="appService.logedUser.role">
               <hr class="horizontal-line">
               <li *ngSwitchCase="admin" data-bs-toggle="modal" (click)="openDialog()"><img src="assets/imgs/icons/AddSimulator-icon.png" alt=""><a>Adicionar Simulador</a></li>
-              <li *ngSwitchCase="user"(click)="openSimulatorsHistory()"><img src="assets/imgs/icons/AddSimulator-icon.png" alt=""><a>Histórico</a></li>
+              <li *ngSwitchCase="user" routerLink="historico"><img src="assets/imgs/icons/AddSimulator-icon.png" alt=""><a>Histórico</a></li>
               <li *ngSwitchCase="user" routerLink="status"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Saúde do Simulador </a></li>
               <li *ngSwitchCase="admin" routerLink="status"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Saúde dos Simuladores </a></li>
               <li *ngSwitchCase="admin" routerLink="aulas"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Preparo de Kits </a></li>
