--- a/src/app/private/classes/classes.component.html
+++ b/src/app/private/classes/classes.component.html
@@ -48,10 +48,14 @@
                             <mat-label>Nome do Simulador</mat-label>
                             <mat-select [(ngModel)]="selectedSimulator">
                                 <mat-option value = "Ressusci Anne" >Ressusci Anne</mat-option>
-                                <mat-option value = "Nurse Anne" >Nurse Anne</mat-option>
                                 <mat-option value = "Mega Code Kelly" >Mega Code Kelly</mat-option>
                                 <mat-option value = "Mega Code Kid" >Mega Code Kid</mat-option>
                                 <mat-option value = "Hurt queimadura" >Hurt queimadura</mat-option>
+                                <mat-option value = "Braço punção Venosa" >Braço punção Venosa</mat-option>
+                                <mat-option value = "Modelo Drenagem Toráxica">Modelo Drenagem Toráxica</mat-option>
+                                <mat-option value = "Torso Punção Central">Torso punção Central</mat-option>
+                                <mat-option value = "Sondagem Vesical F/M">Sondagem Vesical F/M</mat-option>
+                                <mat-option value = "Monitor Cardiaco">Monitor Cardiaco</mat-option>
                             </mat-select>
                             
                         </mat-form-field>
@@ -87,7 +91,7 @@
                                 Currently I am {{panelOpenState ? 'open' : 'closed'}}
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
-                        <p>I'm visible because I am open</p>
+                        <p>Confira os materiais necessários</p>
                         <mat-tab-group>
                             <mat-tab label="Materiais Necessários">
                                  
