--- a/src/app/private/history/history.component.html
+++ b/src/app/private/history/history.component.html
@@ -1,4 +1,4 @@
-<p>history works!</p>
+<h2>Armazenamento</h2>
 <table mat-table [dataSource]="classKit" class="mat-elevation-z8">
 
     <!-- Position Column -->
