--- a/src/app/private/home/home.component.html
+++ b/src/app/private/home/home.component.html
@@ -16,7 +16,7 @@
                             <li><img src="assets/imgs/icons/sunny.png" alt=""><span>Registro de falhas do simulador</span></li>
                             <li><img src="assets/imgs/icons/routine.png" alt=""><span>Produção de relatórios</span></li>
                             <li><img src="assets/imgs/icons/sunny.png" alt=""><span>Acompanhamento de estatus</span></li>
-                            <li><img src="assets/imgs/icons/routine.png" alt=""><span>Analise de indices de Produção</span></li>
+                            <li><img src="assets/imgs/icons/routine.png" alt=""><span>Preparo de aulas</span></li>
                         </ul>
                     </div>
                 </div>
