--- a/src/app/private/modals/kit-confirm-modal/kit-confirm-modal.component.html
+++ b/src/app/private/modals/kit-confirm-modal/kit-confirm-modal.component.html
@@ -5,6 +5,7 @@
     <mat-select [(ngModel)]="storageValue">
         <mat-option value="20">Armário 20</mat-option>
         <mat-option value="30">Armário 30</mat-option>
+        <mat-option value="Bancada">Bancada Deposito</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
