--- a/src/app/private/status/status.component.html
+++ b/src/app/private/status/status.component.html
@@ -19,7 +19,7 @@
                   </div>
                   <div *ngIf="statusAdminSelection">
                       <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Nome: {{element.simulatorName}}</li>
+                        <li class="list-group-item">Simulador: {{element.simulatorName}}</li>
                         <li #liStatusElement class="list-group-item" [class.defaultColor]="isActive">Status:<span>{{valueSelected.value}}</span></li>
                       </ul>
                       <div class="card-footer">
